--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -1,108 +1,11 @@
 @import url("root.css");
 
-/* BANNER */
-
-.top-side {
-  display: flex;
-  background: linear-gradient(
-    0deg,
-    rgb(69, 42, 122) 10%,
-    rgb(118, 68, 216) 90%
-  );
-  height: 70px;
-  min-height: 70px;
-  max-height: 70px;
-  width: 100%;
-}
-
-.box-logo {
-  display: flex;
-  margin: 0 auto;
-}
-
-.logo {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-body img {
-  max-width: 100%;
-  width: 92px;
-}
-
-.box-text {
-  display: flex;
-  padding: 10px;
-  background:  rgb(76, 49, 121);
-  background: linear-gradient(
-    0deg,
-    rgb(76, 49, 121) 10%,
-    rgb(73, 43, 120) 90%
-  );
-  border-radius: 16px;
-  border: 1px;
-  height: 85%;
-  width: 850px;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.primary-text {
-  color: #f0b90b;
-  margin-right: 5px;
-  font-weight: 600; /* spessore*/
-  line-height: 1.5; /*altezza linea testo*/
-  text-transform: uppercase; /*trasforma in maiuscolo tutte le lettere*/
-  font-size: 14px;
-}
-
-.secondary-text {
-  color: rgb(169, 167, 172);
-  margin-right: 5px;
-  font-size: 14px;
-  line-height: 1.5;
-  font-weight: 400;
-}
-
-.site {
-  color: white;
-  margin-right: 5px;
-  font-size: 14px;
-  line-height: 1.5;
-  font-weight: 400;
-}
-
-.close {
-  display: flex;
-  padding: 0;
-  border: none;
-  background: none;
-  cursor: pointer;
-  align-items: center;
-  color: white;
-  position: absolute;
-  top: 3.5%;
-  left: 97%;
-  transform: translate(0%, 0%);
-  font-size: 18px;
-}
-.close:hover{
-  opacity: 0.5;
-}
-
 /*   FOOTER  ------------------------------------------- */
 
-.footer {
+footer {
   background-color: rgb(40, 39, 39);
   width: 100%;
-  height: 65%;
-  position: absolute;
-  top: 100%;
-  left: 0%;
-  transform: translate(0%, 0%);
+  height: 100%;
 }
 
 .box-footer {
@@ -128,12 +31,12 @@ body img {
    margin: 10px;
 }
 .title {
-  color: #7645d9;
+  color: #8051d6;
   text-transform: uppercase;
 }
 
 .text-special {
-  color: #f0b90b;
+  color: #ffb237;
 }
 
 .text-normal {
@@ -148,33 +51,29 @@ body img {
   display: flex;
   width: 50%;
   gap: 30px;
-  position: absolute;
-  top: 80%;
-  left: 10%;
-  transform: translate(0%, 0%);
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #social {
   fill: rgb(139, 130, 138);
 }
+
+/* ------------- UNDER FOOTER ------------*/
+
 .footer-theme {
   display: flex;
   flex-direction: column;
   width: 1200px;
-  padding: auto;
-  position: absolute;
-  top: 90%;
-  left: 10%;
-  transform: translate(0%, 0%);
 }
 
 .box-theme {
   display: flex;
-  width: 1200px;
-  padding: auto;
+  width: 100%;
 }
 
-#lingua {
+#language {
   background: none;
   fill: rgb(103, 88, 101);
   border: none;
@@ -183,7 +82,6 @@ body img {
 .box-buy-cake {
   display: flex;
   width: 50%;
-  padding: auto;
   position: absolute;
   top: 40%;
   left: 80%;
@@ -216,4 +114,7 @@ body img {
 
 a{
   text-decoration: none;
+}
+a:hover{
+  text-decoration: underline white;
 }
