--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -27,8 +27,8 @@ footer {
   list-style: none;
   text-decoration: none;
 }
-.text-footer li{
-   margin: 10px;
+.text-footer li {
+  margin: 10px;
 }
 .title {
   color: #8051d6;
@@ -103,18 +103,76 @@ footer {
   flex-wrap: wrap;
   font-size: 15px;
 }
-.money{
+.money {
   color: #927eba;
   font-weight: 600;
 }
-.button-buy a{
+.button-buy a {
   font-weight: 600;
   color: rgb(255, 255, 255);
 }
 
-a{
+a {
   text-decoration: none;
 }
-a:hover{
+a:hover {
   text-decoration: underline white;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 55px;
+  height: 30px;
+  margin-right: 10px;
+  background-color: antiquewhite;
+  border-radius: 40px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0px;
+  bottom: 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 20px;
+  background-image: url("/media/sole.svg"), url("/media/luna.svg");
+  background-repeat: no-repeat;
+  background-position: 4px center, right center;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 25px;
+  width: 25px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(22px);
+  -ms-transform: translateX(22px);
+  transform: translateX(25px);
+}
+
+.slider.round {
+  border-radius: 20px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
