--- a/style/style_alfio.css
+++ b/style/style_alfio.css
@@ -254,7 +254,7 @@
 }
 
 .dark-million-oblique-line{
-    background: linear-gradient(to bottom left, #201335 50%, #000000 50%) !important;
+    background: linear-gradient(to bottom left, #201335 50%, #08060b 50%) !important;
 }
 
 .background-win-millions {
