--- a/style/styleEarn.css
+++ b/style/styleEarn.css
@@ -222,9 +222,8 @@
 }
 
 .topFarm, .topSyrup {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    gap: 2rem;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .topSyrup {
@@ -268,6 +267,14 @@
     height: 5rem;
     padding-left: 1rem;
     border-left: 1px solid #d7caec;
+}
+
+.dark-earn-background {
+    background: #3B3C51 !important;
+}
+
+.dark-earn-text {
+    color: #ffffff !important;
 }
 
 @media screen and (max-width: 850px) {
