--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -5,7 +5,8 @@
 footer {
   background-color: rgb(40, 39, 39);
   width: 100%;
-  height: 100%;
+  height: 440px;
+  position: relative;
 }
 
 .box-footer {
@@ -76,9 +77,8 @@ footer {
 
 .box-buy-cake {
   display: flex;
-  width: 50%;
   position: absolute;
-  top: 65%;
+  top: 87%;
   left: 74%;
   transform: translate(0%, 0%);
 }
@@ -127,11 +127,12 @@ footer a:hover {
 /* ------------------------------ SWITCH BUTTON --------------------- */
 .switch {
   position: relative;
+  top: 35%;
   display: inline-block;
   width: 55px;
   height: 30px;
   margin-right: 10px;
-  background-color: antiquewhite;
+  background-color: rgb(139, 135, 139, 0.6);
   border-radius: 40px;
   margin-top: 20px;
 }
@@ -189,7 +190,7 @@ input:checked + .slider:before {
 .language-selector {
   display: flex;
   position: absolute;
-  top: 63%;
+  top: 85%;
   left: 18%;
 }
 .language-start{
