--- a/style/banner-footer.css
+++ b/style/banner-footer.css
@@ -7,6 +7,7 @@ footer {
   width: 100%;
   height: 440px;
   position: relative;
+  max-width: 100%;
 }
 
 .box-footer {
@@ -69,12 +70,12 @@ footer {
 .footer-theme {
   display: flex;
   flex-direction: column;
-  width: 1200px;
+  max-width: 100%;
 }
 
 .box-theme {
   display: flex;
-  width: 100%;
+  max-width: 100%;
 }
 /* --------------------------- BUY CAKE ---------------------*/
 
@@ -82,10 +83,25 @@ footer {
   display: flex;
   position: absolute;
   top: 87%;
-  left: 74%;
-  transform: translate(0%, 0%);
+  left: calc(74% - 50px);
+  width: 140px;
+  max-width: 100%;
 }
-
+.money {
+  color: #927eba;
+  font-weight: 600;
+  display: flex;
+  margin-right: 12px;
+  margin-bottom: 5px;
+}
+.money p{
+  margin-top: 3px;
+  margin-left: 5px;
+}
+.money svg:hover{
+  transform: scale(1.2);
+  transition:  ease 0.3s;
+}
 .buy {
   fill: rgb(255, 255, 255);
 }
@@ -94,6 +110,8 @@ footer {
   cursor: pointer;
 }
 .button-buy {
+  position: relative;
+  width: 140px;
   display: flex;
   padding: 6px 22px;
   background-color: var(--button-color);
@@ -106,21 +124,7 @@ footer {
   font-weight: 600;
   color: rgb(255, 255, 255);
 }
-.money {
-  color: #927eba;
-  font-weight: 600;
-  display: flex;
-  margin-right: 10px;
-  margin-bottom: 5px;
-}
-.money p{
-  margin-top: 6px;
-  margin-left: 5px;
-}
-.money svg:hover{
-  transform: scale(1.2);
-  transition:  ease 0.3s;
-}
+
 footer a {
   text-decoration: none;
 }
@@ -130,7 +134,8 @@ footer a:hover {
 /* ------------------------------ SWITCH BUTTON --------------------- */
 .switch {
   position: relative;
-  top: 35%;
+  top: 20%;
+  left: 20%;
   display: inline-block;
   width: 62px;
   height: 35px;
@@ -180,8 +185,8 @@ footer a:hover {
 .slider:hover:before{
   transition: none;
   border: #8051d6 3px solid;
-  height: 30px;
-  width: 30px;
+  height: 28px;
+  width: 28px;
   left: 0px;
   bottom: 0px;
 }
@@ -193,12 +198,14 @@ input:checked + .slider:before {
   background-image: url(/media/luna2.svg);
   background-repeat: no-repeat;
   background-position: 6px 5px;
+  left: 3px;
+  bottom: 2.5px;
+}
+input:checked + .slider:hover:before{
   border: #8051d6 2.5px solid;
   transition: 0.1s;
-  left: 3px;
-  bottom: 0px;
+  bottom: 1px;
 }
-
 .slider.round {
   border-radius: 20px;
 }
@@ -211,9 +218,9 @@ input:checked + .slider:before {
 
 .language-selector {
   display: flex;
-  position: absolute;
-  top: 85%;
-  left: 18%;
+  position: relative;
+  top: 20px;
+  left: 2%;
 }
 .language-start{
   margin: 12px;
@@ -225,6 +232,7 @@ input:checked + .slider:before {
 .language-selector p{
   color: rgb(218, 204, 217);
   margin-left: 6px;
+  margin-top: 3px;
 }
 .language-menu {
   height: 420px;
@@ -232,7 +240,7 @@ input:checked + .slider:before {
   text-align: center;
   display: none;
   position: absolute;
-  top: -850%;
+  top: -750%;
   left: 0;
   padding: 0;
   margin: 0;
@@ -255,4 +263,19 @@ input:checked + .slider:before {
 }
 .language-selector svg {
   fill: rgb(218, 204, 217);
+}
+
+/*----------------------------------- MEDIA QUERY --------------------------*/
+
+@media screen and (max-width: 850px) {
+  
+  .box-buy-cake {
+    position: static;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: right;
+  }
+  .money p{
+    margin-top: 8px;
+  }
 }
