--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 @import url(./style/style_gabriel.css);
 @import url(./style/styleEarn.css);
 @import url(./style/styleCake.css);
-@import url(/Pancake4/style/footer.css);
+@import url(/style/footer.css);
 
 * {
   margin: 0;
