--- a/style/footer.css
+++ b/style/footer.css
@@ -5,7 +5,7 @@
 footer {
   background-color: rgb(40, 39, 39);
   width: 100%;
-  height: 440px;
+  height: 480px;
   position: relative;
   max-width: 100%;
 }
@@ -21,7 +21,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 1%;
+  margin-top: 3%;
 }
 
 .text-footer {
@@ -49,7 +49,7 @@ footer {
 
 .footer-logo {
   fill: white;
-  display: none;
+  margin-top: 10px;
 }
 
 .footer-social {
@@ -75,17 +75,16 @@ footer {
 
 .box-theme {
   display: flex;
+  width: 100%;
   max-width: 100%;
 }
 /* --------------------------- BUY CAKE ---------------------*/
 
 .box-buy-cake {
   display: flex;
-  position: absolute;
-  top: 87%;
-  left: calc(74% - 50px);
-  width: 140px;
-  max-width: 100%;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 3%;
 }
 .money {
   color: #927eba;
@@ -104,6 +103,7 @@ footer {
 }
 .buy {
   fill: rgb(255, 255, 255);
+  width: 100%;
 }
 .buy:hover{
   opacity: 0.8;
@@ -218,13 +218,16 @@ input:checked + .slider:hover:before{
 
 .language-selector {
   display: flex;
-  position: relative;
-  top: 20px;
-  left: 2%;
+  width: 100%;
+  margin-top: 25px;
+  margin-left: 24px;
 }
 .language-start{
   margin: 12px;
   display: flex;
+}
+.language-start p{
+  margin-top: 20px;
 }
 .language-start:hover {
   opacity: 0.8;
@@ -232,7 +235,7 @@ input:checked + .slider:hover:before{
 .language-selector p{
   color: rgb(218, 204, 217);
   margin-left: 6px;
-  margin-top: 3px;
+  margin-top: 0px;
 }
 .language-menu {
   height: 420px;
@@ -265,17 +268,50 @@ input:checked + .slider:hover:before{
   fill: rgb(218, 204, 217);
 }
 
+.footer-them-query{
+  display: none;
+}
 /*----------------------------------- MEDIA QUERY --------------------------*/
 
 @media screen and (max-width: 850px) {
-  
-  .box-buy-cake {
-    position: static;
-    width: 100%;
-    margin-top: 10px;
-    justify-content: right;
+  footer{
+    height: 100%;
   }
   .money p{
     margin-top: 8px;
+  }
+  .box-buy-cake {
+    margin-top: 5%;
+  }
+}
+
+@media screen and (max-width: 391px){
+  .footer-inside {
+    flex-direction: column-reverse;
+  }
+  .footer-logo{
+    border-bottom: 0.5px solid rgb(153, 139, 139);
+    padding: 1rem;
+  }
+  .button-buy {
+    width: 90px;
+    margin-left: 2%;
+    padding: 0px 10px;
+    height: 40%;
+    font-size: 10px;
+    margin-top: 20px;
+  }
+  .footer-social{
+    width: 100%;
+    padding-bottom: 2rem;
+  }
+  .money{
+    margin-top: 8%;
+  }
+  .language-selector {
+    display: flex;
+    width: 100%;
+    margin-top: 25px;
+    margin-left: 5px;
   }
 }
