--- a/style/header.css
+++ b/style/header.css
@@ -13,13 +13,13 @@ header {
 }
 
 /* DARK MODE------------*/
-.header-dark{
+.header-dark {
   background-color: rgb(25, 19, 37) !important;
 }
-.round-background-dark{
+.round-background-dark {
   display: none !important;
 }
-.round-background-dark-true{
+.round-background-dark-true {
   display: block !important;
 }
 .elephant {
@@ -166,8 +166,8 @@ header {
   display: none;
 }
 #space-bunny {
-  width: 55%;
-  max-width: 232px;
+  width: 50%;
+  max-width: 221px;
   height: auto;
   max-height: 300px;
   position: absolute;
@@ -500,16 +500,16 @@ header {
   background-color: #ebf6ff;
   width: 100%;
 }
-.moon-dark{
+.moon-dark {
   background-color: rgb(25, 19, 37);
 }
-.head-caption-dark{
+.head-caption-dark {
   color: white !important;
 }
-.align-bunny{
+.align-bunny {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .moon #astro-bunny {
   width: 40%;
@@ -536,7 +536,7 @@ header {
   width: 40%;
   z-index: 1;
   margin-left: 10%;
-  margin-top: 5%;
+  margin-top: 15%;
 }
 
 .head-caption h1 {
@@ -592,17 +592,16 @@ header {
   display: flex;
   align-items: flex-end;
 }
-.round-background > svg:nth-child(2){
+.round-background > svg:nth-child(2) {
   display: none;
   width: 100%;
   height: auto;
   z-index: 0;
   align-items: flex-end;
 }
-
-@media (max-width: 850px) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
   .elephant {
-    width: 88%;
+    height: 18vh;
   }
   .slide {
     height: 100%;
@@ -611,7 +610,7 @@ header {
   /* SLIDE 1 ----------------- */
 
   #space-station-ipad {
-    width: 83.9%;
+    width: 100%;
     position: absolute;
     top: 0%;
     left: 16.1%;
@@ -625,8 +624,7 @@ header {
     display: none;
   }
   #space-bunny-ipad {
-    width: 70%;
-    height: 100%;
+    width: 100%;
     position: absolute;
     top: -25%;
     left: 50%;
@@ -634,8 +632,7 @@ header {
     animation: fluttua 7s ease-in-out infinite;
     z-index: 11;
     display: block;
-    max-width: 215px;
-    height: auto;
+    max-width: 240px;
   }
   #space-bunny {
     display: none;
@@ -677,12 +674,11 @@ header {
   #baloon-bunny {
     /* coniglietto blu */
     width: 100%;
-    height: 100%;
-    top: -36%;
-    left: 45%;
+    top: -26%;
+    left: 57%;
     z-index: 0;
     display: block;
-    max-width: 285px;
+    max-width: 300px;
     height: auto;
   }
   #star1 {
@@ -744,14 +740,22 @@ header {
   }
 
   .moon #astro-bunny {
-    width: 32%;
+    width: 40%;
+    justify-content: right;
+    margin-top: 50px;
+    height: auto;
+    max-width: 400px;
+    max-height: 300px;
     margin-right: 20px;
   }
+
   .head-caption {
     width: 88%;
-    top: 5%;
-    left: 5%;
+    height: auto;
+    margin-left: 5%;
+    margin-top: 10%;
   }
+
   .head-caption h1 {
     font-size: 44px;
   }
@@ -770,12 +774,302 @@ header {
     left: 160px;
     transform: translate(-20%, 10%);
   }
-  .head-btns {
-    display: flex;
-    flex-direction: column;
-    width: 175px;
-  }
-  .moon-btn{
+  .moon-btn {
     margin-bottom: 12px;
+  }
+  .align-bunny {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 850px) {
+  .elephant {
+    width: 88%;
+  }
+  .slide {
+    height: 100%;
+  }
+
+  /* SLIDE 1 ----------------- */
+
+  #space-station-ipad {
+    width: 83.9%;
+    position: absolute;
+    top: 0%;
+    left: 16.1%;
+    transform: translate(0%, 0%);
+    display: initial;
+    max-width: 100%;
+    height: 100%;
+    display: block;
+  }
+  #space-station {
+    display: none;
+  }
+
+  #space-bunny {
+    display: none;
+  }
+  /* SLIDE 2 ----------------------- */
+
+  .slide2 .caption h2 {
+    font-size: 25px;
+    text-shadow: none;
+  }
+  .slide2 .caption p {
+    width: 85%;
+    text-shadow: 1px 5px 20px rgba(0, 0, 0, 0.4);
+  }
+  #slide2-bunny-ipad {
+    width: 29%;
+    position: absolute;
+    top: -8%;
+    left: 61.5%;
+    transform: translate(33%, 0%);
+    display: block;
+    max-width: 300px;
+    height: 108%;
+  }
+  #slide2-bunny {
+    display: none;
+  }
+  /* SLIDE 3 ----------------------- */
+  .slide3 .caption {
+    top: 20%;
+    left: 0.5%;
+    transform: translate(5%, 0%);
+  }
+  .slide3 .caption h2 {
+    font-size: 25px;
+    text-shadow: 1px 2px 20px rgba(0, 0, 0, 0.4);
+  }
+
+  #star1 {
+    top: 70%;
+    left: 33%;
+    width: 8.5%;
+  }
+  #star2 {
+    top: 60%;
+    left: 20%;
+    width: 6%;
+  }
+
+  #coin-bottom,
+  #coin-top,
+  .framework-container,
+  .framework-container img,
+  .framework-light {
+    display: none;
+  }
+
+  #purple-webkit {
+    font-size: 24px;
+  }
+
+  /* SLIDE 4 ----------------------- */
+
+  #pancake-logo {
+    width: 18%;
+  }
+  #gm-bunny {
+    width: 120%;
+    top: 55%;
+    left: -0%;
+    transform: translate(0%, -50%);
+    display: block;
+    max-width: 100%;
+    height: 108%;
+  }
+
+  /* SLIDE 5 ----------------------- */
+
+  .slide5 .caption {
+    left: 3.5%;
+  }
+  .slide5 .caption h2 {
+    font-size: 38px;
+    font-weight: 500;
+  }
+  #trading-bunny {
+    width: 55%;
+    left: 55%;
+  }
+  /* THE MOON -------------------- */
+
+  .moon {
+    width: 100%;
+    z-index: 0;
+  }
+
+  .moon #astro-bunny {
+    width: 40%;
+    justify-content: right;
+    margin-top: 50px;
+    height: auto;
+    max-width: 400px;
+    max-height: 300px;
+    margin-right: 20px;
+  }
+
+  .head-caption {
+    width: 88%;
+    height: auto;
+    margin-left: 5%;
+    margin-top: 10%;
+  }
+
+  .head-caption h1 {
+    font-size: 44px;
+  }
+
+  /* BUTTONS -------------------- */
+
+  .head-btn {
+    position: absolute;
+    top: 60%;
+    left: 50px;
+    transform: translate(-25%, 10%);
+  }
+  .head-btn2 {
+    position: absolute;
+    top: 60%;
+    left: 160px;
+    transform: translate(-20%, 10%);
+  }
+  .moon-btn {
+    margin-bottom: 12px;
+  }
+  .align-bunny {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 844px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
+  .elephant {
+    height: 20vh;
+  }
+  #space-station-ipad {
+    width: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translate(0%, 0%);
+    display: initial;
+    max-width: 100%;
+    z-index: -1;
+  }
+  .slide1 {
+    z-index: 10;
+  }
+  #space-bunny-ipad {
+    width: 50%;
+    position: absolute;
+    top: -10%;
+    left: 50%;
+    transform: translate(25%, 0%);
+    animation: fluttua 7s ease-in-out infinite;
+    z-index: 11;
+    display: block;
+    max-width: 240px;
+  }
+  .slide1 .caption {
+    width: 70%;
+    position: absolute;
+    top: 10%;
+    left: 0%;
+    transform: translate(5%, 0%);
+  }
+
+  .slide1 .caption p {
+    font-size: 16px;
+  }
+  .slide1 .caption img {
+    display: none;
+  }
+  #purple-webkit {
+    font-size: 25px;
+  }
+  .slide2 .caption {
+    width: 80%;
+  }
+  .slide2 .caption h2 {
+    font-size: 18px;
+  }
+  .slide2 .caption p {
+    font-size: 14px;
+  }
+  .slide3 .caption {
+    top: 10%;
+    width: 70%;
+  }
+  .purple-webkit-2 {
+    font-size: 18px;
+  }
+  .slide3 .caption h2 {
+    font-size: 16px;
+  }
+
+  #baloon-bunny {
+    /* coniglietto blu */
+    width: 50%;
+    top: 0%;
+    left: 48%;
+    z-index: 0;
+    display: block;
+    max-width: 300px;
+    height: auto;
+  }
+  .head-btn {
+    padding: 4px 8px;
+    border-radius: 15px;
+    font-size: 16px;
+    height: 22%;
+    left: 40px;
+  }
+
+  .head-btn2 {
+    padding: 4px 8px;
+    border-radius: 15px;
+    font-size: 16px;
+    height: 22%;
+    left: 140px;
+  }
+  #gm-bunny {
+    width: 155%;
+    position: absolute;
+    top: 54%;
+    left: -55%;
+    transform: translate(0%, -50%);
+    max-width: 600px;
+    height: 110%;
+  }
+  #trading-bunny {
+    width: 70%;
+    left: 45%;
+    height: 120%;
+    border-radius: 35px;
+  }
+  .slide5 .caption {
+    position: absolute;
+    top: 40%;
+    left: 2.5%;
+    transform: translate(0%, -50%);
+  }
+  .slide5 .caption h2 {
+    font-size: 20px;
+  }
+  .slide5 .caption p {
+    font-weight: 500;
+    font-size: 24px;
+    background: linear-gradient(
+      166.02deg,
+      rgb(230, 155, 35) -5.1%,
+      rgb(237, 216, 27) 95.24%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
